# bus-factor-analyzer

./: .gitignore  HowToInstall.md  HowToUse.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
busfactor/: cli.py
busfactor/models/: __init__.py  data_models.py
busfactor/reportGenerator/: file_report_generator.py  html_report_generator.py
busfactor/service/: bus_factor_analyzer.py  repository_manager.py
tests/: test_bus_factor_analyzer.py  test_bus_factor_analyzer_edge_cases.py  test_cli.py  test_cli_analyze.py  test_cli_analyze_help.py  test_cli_hello.py  test_data_models.py  test_report_generators.py  test_repository_manager.py
