[project]
name = "bus-factor-analyzer"
version = "0.1.0"
description = "CLI para analisar dominância de autoria por arquivo"
requires-python = ">=3.10"
dependencies = ["typer>=0.12", "rich>=13.7"]

[project.scripts]
bus-factor-analyzer = "busfactor.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
